# saqal

./: .env.example  .gitignore  Saqal_Technical_Specification.md  pyproject.toml  requirements.txt
app/: __init__.py  main.py  state.py
app/components/: comparison_table.py  diff_viewer.py  feedback_card.py
app/pages/: 1_setup.py  2_review.py  3_adapt.py  4_compare.py  5_history.py
core/: __init__.py  database.py  export.py  input_manager.py  models.py  prompt_manager.py  run_manager.py  session_manager.py
gepa_adapter/: __init__.py  adapter.py  feedback_converter.py
llm/: __init__.py  client.py  config.py
memory/: __init__.py  judge_manager.py  mlflow_config.py  trace_logger.py
