[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "saqal"
version = "1.0.0"
description = "Prompt Refinement Workbench - Interactive Human-in-the-Loop Prompt Optimization"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Saqal Team"}
]
dependencies = [
    "streamlit>=1.28.0",
    "sqlmodel>=0.0.14",
    "openai>=1.0.0",
    "mlflow>=3.9.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "pandas>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "core*", "gepa_adapter*", "llm*", "memory*"]
